fix get orders and refactor orders db
